@@ -1,1 +1,3 @@
-irc.freezedown.org 6667 nopass
+# Undernet Round Robin 
+us.undernet.org
+
